fix scrollbar

--- a/src/components/login/style.module.scss
+++ b/src/components/login/style.module.scss
@@ -23,7 +23,7 @@
   }
 }
 .form {
-  @apply mt-8 rounded-lg bg-white px-4 py-9 shadow-lg md:mt-16 md:px-12 md:pt-12 md:pb-8;
+  @apply mt-8 rounded-lg bg-white px-4 py-9 shadow-lg md:mt-12 md:px-12 md:pt-12 md:pb-8;
   .abc-btn {
     @apply shadow-md;
     padding: 10px !important;
