--- a/src/layouts/style.module.scss
+++ b/src/layouts/style.module.scss
@@ -1,3 +1,3 @@
 .layout-default :global {
-  @apply flex h-full flex-col justify-between overflow-hidden;
+  @apply flex h-full flex-col justify-between;
 }
